@@ -345,11 +345,17 @@ Speed=19200
 ## Hitachi HD44780 driver ##
 [hd44780]
 
+# Select what type of connection. See documentation for types.
+ConnectionType=4bit
+
 # Port where the LPT is. Usual values are 0x278, 0x378 and 0x3BC
 Port=0x378
 
-# Select what type of connection. See documentation for types.
-ConnectionType=4bit
+# Device of the serial interface (default is /dev/lcd)
+Device=/dev/ttyS0
+
+# Bitrate of the serial port (0 for interface default)
+Speed=0
 
 # If you have a keypad connected.
 # You may also need to configure the keypad layout further on in this file.
@@ -381,6 +387,10 @@ Size=20x4
 # set this flag to get into extended mode (4-line linear).
 # This flag is NOT the old obsolete Extended option.
 #ExtendedMode=yes
+
+# Character map to to map ISO-8859-1 to the LCD's character set
+# [default: hd44780_default; legal: hd44780_default, ea_ks0073 ]
+Charmap=hd44780_default
 
 # If your display is slow and cannot keep up with the flow of data from
 # LCDd, garbage can appear on the LCDd. Set this delay factor to 2 or 4
