@@ -1,9 +1,0 @@
-#ifndef HD_LCDSERIALIZER_H
-#define HD_LCDSERIALIZER_H
-
-#include "lcd.h"					  /* for Driver */
-
-// initialise this particular driver
-int hd_init_lcdserializer (Driver *drvthis);
-
-#endif
