@@ -1,9 +1,0 @@
-#ifndef HD_PICANLCD_H
-#define HD_PICANLCD_H
-
-#include "lcd.h"					  /* for Driver */
-
-// initialise this particular driver
-int hd_init_picanlcd (Driver *drvthis);
-
-#endif
