@@ -26,6 +26,10 @@ v.0.5dev (ongoing development)
  + add MD8800 driver for LCDs in Medion MD8800 PCs (Stefan Herdler/Martin Møller)
  * make bigclock client screen more flexible: centered, require only 14 chars
  * correct axis mapping logic for joystick driver (Jannis Achstetter)
+ * fixes to the CFontz driver
+ + new unified serial sub-driver for hd44780 (Matteo Pillon)
+ - obsolete hd44780 subdrivers-removed: lcdserializer, picanlcd
+ * character mapping for special HD44780 modules (Matteo Pillon)
 
 v0.5.0
 This version has split off from unstable-0.4.3. Includes major changes.
